swagger param adjust
