# cmd/server/controllers/sellers.go
@@ -56,9 +56,10 @@ func (c *SellerController) GetAll() gin.HandlerFunc {
 // @Description get seller
 // @Accept  json
 // @Produce  json
+// @Param id   path int true "Seller ID"
 // @Success 200 {object} request
 // @Failure 404 {object} string
-// @Router /api/v1/sellers/:id [get]
+// @Router /api/v1/sellers/{id} [get]
 func (c *SellerController) GetById() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id, err := strconv.ParseInt(ctx.Param("id"), 10, 64)
@@ -134,8 +135,10 @@ func (c *SellerController) Create() gin.HandlerFunc {
 // @Description update seller
 // @Accept  json
 // @Produce  json
+// @Param product body request true "Seller to create"
+// @Param id   path int true "Seller ID"
 // @Success 200 {object} request
-// @Router /api/v1/sellers/:id [patch]
+// @Router /api/v1/sellers/{id} [patch]
 func (s *SellerController) Update() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id, err := strconv.ParseInt(ctx.Param("id"), 10, 64)
@@ -164,8 +167,9 @@ func (s *SellerController) Update() gin.HandlerFunc {
 // @Summary Delete seller
 // @Tags Sellers
 // @Description delete seller
+// @Param id   path int true "Seller ID"
 // @Success 204 {object} request
-// @Router /api/v1/sellers/:id [delete]
+// @Router /api/v1/sellers/{id} [delete]
 func (c *SellerController) Delete() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id, err := strconv.ParseInt(ctx.Param("id"), 10, 64)
