# cmd/server/docs/swagger.json
@@ -74,7 +74,7 @@
                 }
             }
         },
-        "/api/v1/sellers/:id": {
+        "/api/v1/sellers/{id}": {
             "get": {
                 "description": "get seller",
                 "consumes": [
@@ -87,6 +87,15 @@
                     "Sellers"
                 ],
                 "summary": "List seller",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Seller ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -108,6 +117,15 @@
                     "Sellers"
                 ],
                 "summary": "Delete seller",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Seller ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content",
@@ -129,6 +147,24 @@
                     "Sellers"
                 ],
                 "summary": "Update seller",
+                "parameters": [
+                    {
+                        "description": "Seller to create",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.request"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Seller ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
